# plxhelper

./: .gitignore  LICENSE  README.md  pipe_path_task.py  pyproject.toml  requirements.txt
plxhelper/: __init__.py  duncan_selig.py  exceptions.py  geo.py  linear_elastic_soil.py  live_load.py  pipe_path_task.py  plate.py  plaxis_helper.py  plaxis_protocol.py  project_script.ipynb  single_pipe_reline.py  single_pipe_reline_task.py  task_chain.py
plxhelper/tsv/: hardening_soil_duncan_selig.tsv  linear_elastic_soil.tsv  live_load.tsv  plate.tsv
plxhelper/tsv/Ms/: SW61.tsv  SW80.tsv  SW85.tsv  SW90.tsv  SW95.tsv
tests/: conftest.py  plaxismock.py  test_bounding_box.py  test_plaxis_helper.py  test_plaxis_helper_live.py  test_task_chain.py  test_vector.py
